--- a/assignments/JS/InMemory POS/index.html
+++ b/assignments/JS/InMemory POS/index.html
@@ -10,6 +10,7 @@
     <!----------------------------------Boostrap------------------------------------>
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="../../../assets/css/necolas.github.io_normalize.css_8.0.1_normalize.css">
+    <script src="assets/js/bootstrap.js"></script>
 
 
 </head>
@@ -77,7 +78,7 @@
 
     <section class="container-fluid p-0 position-relative" style="height: 93vh; width: 100vw">
 
-        <img src="assest/homepage/Background.png" class="img-fluid position-absolute" style="height: 93vh; width: 100vw">
+        <img src="assets/Frame%2027%20(3).png" class="img-fluid position-absolute" style="height: 93vh; width: 100vw">
 
         <div class="position-absolute text-center w-100">
 
@@ -95,7 +96,6 @@
 <main id="customerPage">
 
     <section class="container-fluid p-0 position-relative " style="height: 93vh; width: 100vw">
-
 
         <div class="row">
 
@@ -158,7 +158,7 @@
 
                     <h2 style="color: black" class="text-center m-4">Customer Details</h2>
 
-                    <table class="table">
+                    <table class="table" >
                         <thead>
                         <tr>
                             <th scope="col" style="color: black">ID</th>
@@ -396,13 +396,13 @@
                             </div>
                             <div class="col-3 mt-2">
                                 <div class="form-group">
-                                    <label for="unitePriceOrder" class="form-label" style="color: black">Unite Price :</label>
+                                    <label for="unitePriceOrder" class="form-label" style="color: black">Price :</label>
                                     <input id="unitePriceTxtOrderPage" type="unitePrice" class="form-control" id="unitePriceOrder">
                                 </div>
                             </div>
                             <div class="col-3 mt-2">
                                 <div class="form-group">
-                                    <label for="itemQtyOrder" class="form-label" style="color: black">Quantity :</label>
+                                    <label for="itemQtyOrder" class="form-label" style="color: black">QTY :</label>
                                     <input id="itemQtyTxtOrderPage" type="itemQty" class="form-control" id="itemQtyOrder">
                                 </div>
                             </div>
@@ -495,7 +495,7 @@
 
                     <h2 style="color: black" class="text-center m-4">Cart</h2>
 
-                    <table class="table">
+                    <table class="table table-hover mt-3">
                         <thead>
                         <tr>
                             <th scope="col" style="color: black">Item ID</th>
@@ -547,7 +547,7 @@
 
                 <div>
 
-                    <h2 style="color: white" class="text-center m-4">Order Details</h2>
+                    <h2 style="color: #000000" class="text-center m-4">Order Details</h2>
 
                     <table class="table">
                         <thead>
