--- a/assignments/JS/InMemory POS/index.html
+++ b/assignments/JS/InMemory POS/index.html
@@ -76,9 +76,9 @@
 
 <main id="homePage">
 
-    <section class="container-fluid p-0 position-relative" style="height: 93vh; width: 100vw">
+    <section class="container-fluid p-0 position-relative" style="height: 87vh; width: 95vw">
 
-        <img src="assets/Frame%2027%20(3).png" class="img-fluid position-absolute" style="height: 93vh; width: 100vw">
+        <img src="assets/Frame%2027%20(3).png" class="img-fluid position-absolute" style="height: 87vh; width: 95vw">
 
         <div class="position-absolute text-center w-100">
 
@@ -95,7 +95,7 @@
 
 <main id="customerPage">
 
-    <section class="container-fluid p-0 position-relative " style="height: 93vh; width: 100vw">
+    <section class="container-fluid p-0 position-relative " style="height: 87vh; width: 95vw">
 
         <div class="row">
 
@@ -109,7 +109,7 @@
 
             <div class="col-1"></div>
 
-            <div class="col-4">
+            <div class="mt-0 col-12 col-sm-6 col-md-5 col-lg-4 col-xl-5  col-xxl-5 ">
 
                 <div>
 
@@ -152,7 +152,7 @@
 
             <div class="col-1"></div>
 
-            <div class="col-5">
+            <div class="mt-5 col-12 col-sm-6 col-md-5 col-lg-6 col-xl-5  col-xxl-5">
 
                 <div>
 
@@ -191,7 +191,7 @@
 
 <main id="itemPage">
 
-    <section class="container-fluid p-0 position-relative" style="height: 93vh; width: 100vw">
+    <section class="container-fluid p-0 position-relative" style="height: 87vh; width: 95vw">
 
         <div class="row">
 
@@ -205,7 +205,7 @@
 
             <div class="col-1"></div>
 
-            <div class="col-4">
+            <div class="mt-0 col-12 col-sm-6 col-md-5 col-lg-4 col-xl-5  col-xxl-5">
 
                 <div>
 
@@ -248,7 +248,7 @@
 
             <div class="col-1"></div>
 
-            <div class="col-5">
+            <div class="mt-5 col-12 col-sm-6 col-md-5 col-lg-6 col-xl-5  col-xxl-5">
 
                 <div>
 
@@ -291,7 +291,7 @@
 
 <main id="orderPage">
 
-    <section class="container-fluid p-0 position-relative " style="height: 93vh; width: 100vw">
+    <section class="container-fluid p-0 position-relative " style="height: 87vh; width: 95vw">
 
         <div class="row">
 
@@ -489,7 +489,7 @@
 
             <div class="col-2"></div>
 
-            <div class="col-8">
+            <div class=" col-12 col-sm-6 col-md-5 col-lg-6 col-xl-5  col-xxl-5">
 
                 <div>
 
@@ -543,7 +543,7 @@
 
             <div class="col-1"></div>
 
-            <div class="col-8">
+            <div class="mt-5 col-12 col-sm-6 col-md-5 col-lg-6 col-xl-5  col-xxl-5">
 
                 <div>
 
