--- a/assignments/JS/InMemory POS/index.html
+++ b/assignments/JS/InMemory POS/index.html
@@ -92,7 +92,7 @@
 
         </div>
 
-        <div class="row position-absolute container-fluid" style="top: 1vw;">
+        <div class="row position-absolute container-fluid" style="top: 0vw;">
 
             <div class="col-1"></div>
 
@@ -188,7 +188,7 @@
 
         </div>
 
-        <div class="row position-absolute container-fluid" style="top: 1vw;">
+        <div class="row position-absolute container-fluid" style="top: 0vw;">
 
             <div class="col-1"></div>
 
@@ -468,43 +468,46 @@
                 </div>
             </div>
 
-        </div>
+            <div class="row">
+
+                <div class="col-2 mt-2"></div>
+
+                <div class=" col-12 col-sm-6 col-md-5 col-lg-6 col-xl-8  col-xxl-5">
+
+                    <div>
+
+                        <h2 style="color: black" class="text-center m-0">Cart</h2>
+
+                        <table class="table table-hover mt-3">
+                            <thead>
+                            <tr>
+                                <th scope="col" style="color: black">Item ID</th>
+                                <th scope="col" style="color: black">Name</th>
+                                <th scope="col" style="color: black">Qty</th>
+                                <th scope="col" style="color: black">Total</th>
+                            </tr>
+                            </thead>
+
+                            <tbody id="tblItemBodyOrderPage">
+
+                            </tbody>
+                        </table>
 
 
-
-        <div class="row position-absolute container-fluid" style="top: 64vh;">
-
-            <div class="col-2"></div>
-
-            <div class=" col-12 col-sm-6 col-md-5 col-lg-6 col-xl-5  col-xxl-5">
-
-                <div>
-
-                    <h2 style="color: black" class="text-center m-4">Cart</h2>
-
-                    <table class="table table-hover mt-3">
-                        <thead>
-                        <tr>
-                            <th scope="col" style="color: black">Item ID</th>
-                            <th scope="col" style="color: black">Name</th>
-                            <th scope="col" style="color: black">Qty</th>
-                            <th scope="col" style="color: black">Total</th>
-                        </tr>
-                        </thead>
-
-                        <tbody id="tblItemBodyOrderPage">
-
-                        </tbody>
-                    </table>
-
+                    </div>
 
                 </div>
 
+                <div class="col-2"></div>
+
             </div>
 
-            <div class="col-2"></div>
 
         </div>
+
+
+
+
 
     </section>
 
@@ -514,7 +517,7 @@
 
 <main id="allOrdersPage">
 
-    <section class="container-fluid p-0 position-relative" style="height: 93vh; width: 100vw">
+    <section class="container-fluid p-0 position-relative" style="height: 87vh; width: 95vw">
 
         <div class="row">
 
@@ -530,7 +533,7 @@
 
             <div class="col-1"></div>
 
-            <div class="mt-5 col-12 col-sm-6 col-md-5 col-lg-6 col-xl-5  col-xxl-5">
+            <div class="mt-5 col-12 col-sm-6 col-md-5 col-lg-6 col-xl-8  col-xxl-5">
 
                 <div>
 
