--- a/assignments/JS/InMemory POS/index.html
+++ b/assignments/JS/InMemory POS/index.html
@@ -316,7 +316,7 @@
                         <div class="col-6 mt-2 ">
                             <label class="form-label" style="color: black">Customer :</label>
 
-                            <select class="form-select text-warning "
+                            <select class="form-select text-dark "
                                     aria-label="Default select example" id="customerIdOrder">
                             </select>
                         </div>
@@ -362,7 +362,7 @@
                             <div class="col-6 mt-2 ">
                                 <label class="form-label" style="color: black">Item :</label>
 
-                                <select class="form-select text-warning "
+                                <select class="form-select text-dark "
                                         aria-label="Default select example" id="itemOrder">
                                 </select>
                             </div>
