--- a/assignments/JS/InMemory POS/index.html
+++ b/assignments/JS/InMemory POS/index.html
@@ -65,7 +65,7 @@
 
     <section class="container-fluid p-0 position-relative" style="height: 92vh; width: 100vw">
 
-        <img src="assets/Frame%2027%20(3).png" class="img-fluid position-absolute" style="height: 92.22vh; width: 100vw">
+        <img src="assets/image/Frame%2027%20(3).png" class="img-fluid position-absolute" style="height: 92.22vh; width: 100vw">
 
         <div class="position-absolute text-center w-100">
 
@@ -82,7 +82,10 @@
 
 <main id="customerPage">
 
-    <section class="container-fluid p-0 position-relative " style="height: 87vh; width: 95vw">
+    <section class="container-fluid p-0 position-relative " style="height: 92vh; width: 100vw">
+
+        <img src="assets/image/customer.png" class="img-fluid position-absolute" style="height: 92.22vh; width: 100vw">
+
 
         <div class="row">
 
@@ -102,25 +105,25 @@
 
                     <form>
 
-                        <h2 style="color: black" class="text-center m-4">Customer Registration</h2>
+                        <h2 style="color: #ffffff" class="text-center m-4">Customer Registration</h2>
 
                         <div class="mb-3">
-                            <label for="id" class="form-label" style="color: black">Customer ID :</label>
+                            <label for="id" class="form-label" style="color: #ffffff">Customer ID :</label>
                             <input id="customerIdText" type="id" class="form-control" id="id">
                         </div>
 
                         <div class="mb-3">
-                            <label for="name" class="form-label" style="color: black">Customer Name :</label>
+                            <label for="name" class="form-label" style="color: #ffffff">Customer Name :</label>
                             <input id="customerNameText" type="name" class="form-control" id="name">
                         </div>
 
                         <div class="mb-3">
-                            <label for="address" class="form-label" style="color: black">Customer Address :</label>
+                            <label for="address" class="form-label" style="color: #ffffff">Customer Address :</label>
                             <input id="customerAddressText" type="address" class="form-control" id="address">
                         </div>
 
                         <div class="mb-3">
-                            <label for="salary" class="form-label" style="color: black">Customer Salary :</label>
+                            <label for="salary" class="form-label" style="color: #ffffff">Customer Salary :</label>
                             <input id="customerSalaryText" type="salary" class="form-control" id="salary">
                         </div>
 
@@ -143,7 +146,7 @@
 
                 <div>
 
-                    <h2 style="color: black" class="text-center m-4">Customer Details</h2>
+                    <h2 style="color: #ffffff" class="text-center m-4">Customer Details</h2>
 
                     <table class="table" >
                         <thead>
@@ -178,7 +181,10 @@
 
 <main id="itemPage">
 
-    <section class="container-fluid p-0 position-relative" style="height: 87vh; width: 95vw">
+    <section class="container-fluid p-0 position-relative" style="height: 92vh; width: 100vw">
+
+        <img src="assets/image/item.png" class="img-fluid position-absolute" style="height: 92.22vh; width: 100vw">
+
 
         <div class="row">
 
@@ -198,25 +204,25 @@
 
                     <form>
 
-                        <h2 style="color: black" class="text-center m-4">Item</h2>
+                        <h2 style="color: #ffffff" class="text-center m-4">Item</h2>
 
                         <div class="mb-3">
-                            <label for="itemCode" class="form-label" style="color: black">Item Code :</label>
+                            <label for="itemCode" class="form-label" style="color: #ffffff">Item Code :</label>
                             <input id="itemCodeTxt" type="itemCode" class="form-control" id="itemCode">
                         </div>
 
                         <div class="mb-3">
-                            <label for="itemName" class="form-label" style="color: black">Item Name :</label>
+                            <label for="itemName" class="form-label" style="color: #ffffff">Item Name :</label>
                             <input id="itemNameTxt" type="itemName" class="form-control" id="itemName">
                         </div>
 
                         <div class="mb-3">
-                            <label for="unitePrice" class="form-label" style="color: black">Item Price :</label>
+                            <label for="unitePrice" class="form-label" style="color: #ffffff">Item Price :</label>
                             <input id="unitePriceTxt" type="unitePrice" class="form-control" id="unitePrice">
                         </div>
 
                         <div class="mb-3">
-                            <label for="itemQty" class="form-label" style="color: black">Item Quantity :</label>
+                            <label for="itemQty" class="form-label" style="color: #ffffff">Item Quantity :</label>
                             <input id="itemQtyTxt" type="itemQty" class="form-control" id="itemQty">
                         </div>
 
@@ -239,7 +245,7 @@
 
                 <div>
 
-                    <h2 style="color: black" class="text-center m-4">Item Details</h2>
+                    <h2 style="color: #ffffff" class="text-center m-4">Item Details</h2>
 
                     <table class="table">
 
@@ -278,7 +284,10 @@
 
 <main id="orderPage">
 
-    <section class="container-fluid p-0 position-relative " style="height: 87vh; width: 95vw">
+    <section class="container-fluid p-0 position-relative " style="height: 92vh; width: 100vw">
+
+        <img src="assets/image/Order.png" class="img-fluid position-absolute" style="height: 92.22vh; width: 100vw">
+
 
         <div class="row">
 
@@ -293,19 +302,19 @@
 <!--            <div class="col-1"></div>-->
 
             <div class="col-lg-4 text-black  ">
-                <h5 style="color: black" class="text-center m-3 mt-5 ">Invoice Details</h5>
+                <h5 style="color: #ffffff" class="text-center m-3 mt-5 ">Invoice Details</h5>
                 <div class="card-body">
                     <div class="row">
                         <div class="col-6 mt-2">
                             <div class="form-group">
-                                <label for="orderID" class="form-label" style="color: black">Order ID :</label>
+                                <label for="orderID" class="form-label" style="color: #ffffff">Order ID :</label>
                                 <input id="orderIDTxtOrderPage" type="orderID" class="form-control" id="orderID">
                             </div>
                         </div>
 
                         <div class="col-6 mt-2">
                             <div class="form-group">
-                                <label for="date" class="form-label" style="color: black">Date :</label>
+                                <label for="date" class="form-label" style="color: #ffffff">Date :</label>
                                 <input id="dateTxtOrderPage" type="date" class="form-control" id="date">
                             </div>
                         </div>
@@ -314,7 +323,7 @@
                     </div>
                     <div class="row">
                         <div class="col-6 mt-2 ">
-                            <label class="form-label" style="color: black">Customer :</label>
+                            <label class="form-label" style="color: #ffffff">Customer :</label>
 
                             <select class="form-select text-dark "
                                     aria-label="Default select example" id="customerIdOrder">
@@ -322,7 +331,7 @@
                         </div>
                         <div class="col-6 mt-2">
                             <div class="form-group">
-                                <label for="customerId" class="form-label" style="color: black">Customer ID :</label>
+                                <label for="customerId" class="form-label" style="color: #ffffff">Customer ID :</label>
                                 <input id="customerIdTxtOrderPage" type="customerId" class="form-control" id="customerId">
                             </div>
                         </div>
@@ -330,19 +339,19 @@
                     <div class="row">
                         <div class="col-6 mt-2">
                             <div class="form-group">
-                                <label for="customerName" class="form-label" style="color: black">Customer Name :</label>
+                                <label for="customerName" class="form-label" style="color: #ffffff">Customer Name :</label>
                                 <input id="customerNameTxtOrderPage" type="customerName" class="form-control" id="customerName">
                             </div>
                         </div>
                         <div class="col-6 mt-2">
                             <div class="form-group">
-                                <label for="customerSalary" class="form-label" style="color: black">Customer Salary :</label>
+                                <label for="customerSalary" class="form-label" style="color: #ffffff">Customer Salary :</label>
                                 <input id="customerSalaryTxtOrderPage" type="customerSalary" class="form-control" id="customerSalary">
                             </div>
                         </div>
                         <div class="col-12 mt-2">
                             <div class="form-group">
-                                <label for="customerAddress" class="form-label" style="color: black">Customer Address :</label>
+                                <label for="customerAddress" class="form-label" style="color: #ffffff">Customer Address :</label>
                                 <input id="customerAddressTxtOrderPage" type="customerAddress" class="form-control" id="customerAddress">
                             </div>
                         </div>
@@ -356,11 +365,11 @@
 <!--            <div class="col-2">-->
 
                 <div class="container-fluid col-lg-4 text-black ">
-                    <h5 style="color: black" class="text-center m-3 mt-5">Item Select</h5>
+                    <h5 style="color: #ffffff" class="text-center m-3 mt-5">Item Select</h5>
                     <div class="card-body">
                         <div class="row">
                             <div class="col-6 mt-2 ">
-                                <label class="form-label" style="color: black">Item :</label>
+                                <label class="form-label" style="color: #ffffff">Item :</label>
 
                                 <select class="form-select text-dark "
                                         aria-label="Default select example" id="itemOrder">
@@ -368,7 +377,7 @@
                             </div>
                             <div class="col-6 mt-2">
                                 <div class="form-group">
-                                    <label for="itemCodeOrder" class="form-label" style="color: black">Item Code :</label>
+                                    <label for="itemCodeOrder" class="form-label" style="color: #ffffff">Item Code :</label>
                                     <input id="itemCodeTxtOrderPage" type="itemCode" class="form-control" id="itemCodeOrder">
                                 </div>
                             </div>
@@ -377,25 +386,25 @@
                         <div class="row">
                             <div class="col-6 mt-2">
                                 <div class="form-group">
-                                    <label for="itemNameOrder" class="form-label" style="color: black">Item Name :</label>
+                                    <label for="itemNameOrder" class="form-label" style="color: #ffffff">Item Name :</label>
                                     <input id="itemNameTxtOrderPage" type="itemName" class="form-control" id="itemNameOrder">
                                 </div>
                             </div>
                             <div class="col-3 mt-2">
                                 <div class="form-group">
-                                    <label for="unitePriceOrder" class="form-label" style="color: black">Price :</label>
+                                    <label for="unitePriceOrder" class="form-label" style="color: #ffffff">Price :</label>
                                     <input id="unitePriceTxtOrderPage" type="unitePrice" class="form-control" id="unitePriceOrder">
                                 </div>
                             </div>
                             <div class="col-3 mt-2">
                                 <div class="form-group">
-                                    <label for="itemQtyOrder" class="form-label" style="color: black">QTY :</label>
+                                    <label for="itemQtyOrder" class="form-label" style="color: #ffffff">QTY :</label>
                                     <input id="itemQtyTxtOrderPage" type="itemQty" class="form-control" id="itemQtyOrder">
                                 </div>
                             </div>
                             <div class="col-12 mt-2">
                                 <div class="form-group">
-                                    <label for="itemOrderQtyOrder" class="form-label" style="color: black">Order Qty :</label>
+                                    <label for="itemOrderQtyOrder" class="form-label" style="color: #ffffff">Order Qty :</label>
                                     <input id="itemOrderQtyOrderTxtOrderPage" type="itemOrderQtyOrder" class="form-control" id="itemOrderQtyOrder">
                                 </div>
                             </div>
@@ -476,7 +485,7 @@
 
                     <div>
 
-                        <h2 style="color: black" class="text-center m-0">Cart</h2>
+                        <h2 style="color: #ffffff" class="text-center m-0">Cart</h2>
 
                         <table class="table table-hover mt-3">
                             <thead>
@@ -517,7 +526,10 @@
 
 <main id="allOrdersPage">
 
-    <section class="container-fluid p-0 position-relative" style="height: 87vh; width: 95vw">
+    <section class="container-fluid p-0 position-relative" style="height: 92vh; width: 100vw">
+
+        <img src="assets/image/orderDeatil.png" class="img-fluid position-absolute" style="height: 92.22vh; width: 100vw">
+
 
         <div class="row">
 
@@ -537,7 +549,7 @@
 
                 <div>
 
-                    <h2 style="color: #000000" class="text-center m-4">Order Details</h2>
+                    <h2 style="color: #ffffff" class="text-center m-4">Order Details</h2>
 
                     <table class="table">
                         <thead>
