--- a/assignments/JS/InMemory POS/index.html
+++ b/assignments/JS/InMemory POS/index.html
@@ -82,7 +82,7 @@
 
 <main id="customerPage">
 
-    <section class="container-fluid p-0 position-relative " style="height: 92vh; width: 100vw">
+    <section style="height: 92.22vh; width: 99vw">
 
         <img src="assets/image/customer.png" class="img-fluid position-absolute" style="height: 92.22vh; width: 100vw">
 
@@ -95,7 +95,7 @@
 
         </div>
 
-        <div class="row position-absolute container-fluid" style="top: 4vw;">
+        <div class="row position-absolute container-fluid" style="top: 8vw;">
 
             <div class="col-1"></div>
 
@@ -181,7 +181,7 @@
 
 <main id="itemPage">
 
-    <section class="container-fluid p-0 position-relative" style="height: 92vh; width: 100vw">
+    <section style="height: 92.22vh; width: 100vw">
 
         <img src="assets/image/item.png" class="img-fluid position-absolute" style="height: 92.22vh; width: 100vw">
 
@@ -194,7 +194,7 @@
 
         </div>
 
-        <div class="row position-absolute container-fluid" style="top: 4vw;">
+        <div class="row position-absolute container-fluid" style="top: 8vw;">
 
             <div class="col-1"></div>
 
@@ -284,7 +284,7 @@
 
 <main id="orderPage">
 
-    <section class="container-fluid p-0 position-relative " style="height: 92vh; width: 100vw">
+    <section  style="height: 92.22vh; width: 100vw">
 
         <img src="assets/image/Order.png" class="img-fluid position-absolute" style="height: 92.22vh; width: 100vw">
 
@@ -297,7 +297,7 @@
 
         </div>
 
-        <div class="row position-absolute container-fluid" style="top: 4vw;">
+        <div class="row position-absolute container-fluid" style="top: 8vw;">
 
 <!--            <div class="col-1"></div>-->
 
@@ -526,7 +526,7 @@
 
 <main id="allOrdersPage">
 
-    <section class="container-fluid p-0 position-relative" style="height: 92vh; width: 100vw">
+    <section  style="height: 92.22vh; width: 100vw">
 
         <img src="assets/image/orderDeatil.png" class="img-fluid position-absolute" style="height: 92.22vh; width: 100vw">
 
