--- a/index.html
+++ b/index.html
@@ -163,9 +163,8 @@
 
 
         <!--        my expertise section-->
-        <section>
-
-            <dfn id="expertise"></dfn>
+        <section id="expertise-section" class="expertise">
+<!--            <dfn id="expertise"></dfn>-->
 
             <h5 class="animate__animated animate__fadeInLeft">My Expertise</h5>
             <h1 >What Can I Do For Your Needs</h1>
